# workshop-helmsman

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  alembic.ini  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  requirements.txt  synthesis_brief.md
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_help_resolved_by.py  0003_milestone_input.py
deploy/: Caddyfile  Dockerfile  RUNBOOK.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh
deploy/systemd/: workshop-helmsman.service
frontend/: next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/lib/: api.ts  format.ts  poll.ts
frontend/static/: app.js  form_editor.js  help_status.js  style.css
frontend/templates/: _form_field_row.html  _stubs.html  admin_dashboard.html  admin_edit.html  admin_form.html  admin_form_template.html  admin_new.html  admin_template_edit.html  admin_templates.html  base.html  console.html  console_index.html  console_workshop_new.html  landing.html  participant_drilldown.html  participant_join.html  participant_tracker.html  workshop_archived.html  workshop_expired.html  workshops_index.html
spec/: agent.md  api.md  architecture.md  capabilities.md  data-model.md  roadmap.md  vision.md
src/: __init__.py  __main__.py  db.py  main.py  models.py  security.py
src/helmsman/: security.py
tests/: conftest.py
tests/e2e/: core-loop.spec.ts  edit-participant.spec.ts  helpers.ts  (+5 more)
tools/: migrate.py
(+90 files in other folders)
